Added some styling

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h4>INDIA</h4>
         </div>
         <div class="temperature">
-            <div class="left-temp">32</div><div class="right-temp">F</i></div>
+            <span class="left-temp">32</span><span class="right-temp">F</span>
         </div>
         <div class="climate">
             <span>HAZE</span>
